# ibkr-margin-rates

./: .pre-commit-config.yaml  README.md  main.py  margin_rates_data.json  margin_rates_history.jsonl  pyproject.toml  template.html
.github/workflows/: update.yml
docs/: index.html
